fixes forecast data not showing at first render

--- a/src/components/MainPage/styles/mobile.scss
+++ b/src/components/MainPage/styles/mobile.scss
@@ -5,6 +5,7 @@
 
   .mobile-content {
     padding-bottom: 100px;
+
     .header {
       padding: 0 60px;
       margin-bottom: 30px;
@@ -19,12 +20,35 @@
       @include d-flex(center, center, row);
       padding-top: 18px;
       padding-bottom: 18px;
-      margin-bottom: 30px;
+      height: 70px;
+      width: 80%;
+      margin: 0 auto 30px;
 
       .btn {
         @include button;
         margin-right: 15px;
         color: $primary-text-blue;
+      }
+
+      form {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        width: 80%;
+
+        input {
+          height: 100%;
+          border-radius: 3px;
+          border: 1px solid black;
+          width: 100%;
+          font-size: 24px;
+        }
+
+        button {
+          background: none;
+          border: none;
+          margin-left: 15px;
+        }
       }
 
       .txt {
@@ -49,9 +73,10 @@
         position: relative;
 
         img {
-            max-width: 100%;
-            object-fit: cover;
+          max-width: 100%;
+          object-fit: cover;
         }
+
         &.active::after {
           position: absolute;
           bottom: -24px;
